--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "web.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node web.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "twilio": "^3.17.5"
   },
  "engines": {
-  "node":"8.11.3"
+  "node":"8.11.3",
+  "npm":"5.7.1"
   }
 }
