--- a/package.json
+++ b/package.json
@@ -5,24 +5,32 @@
   "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "globals": "npm i -g cross-env",
+    "start": " set NODE_ENV=development & gulp",
+    "qa2": "cross-env NODE_ENV=qa2 & node app.js",
+    "prod": "set NODE_ENV=production & gulp"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.10",
     "mongoose": "^5.0.13",
+    "morgan": "^1.9.0",
     "multer": "^1.3.0",
+    "pdfkit": "^0.8.3",
     "random-number": "0.0.9",
     "twilio": "^3.17.5"
   },
- "engines": {
-  "node":"8.11.3",
-  "npm":"5.7.1"
+  "engines": {
+    "node": "8.11.3",
+    "npm": "5.7.1"
   }
 }
